2000-04-12  Miguel de Icaza  <miguel@gnu.org>

	* e-table-header-item.c (ethi_end_resize): Reset resize_guide here.

2000-04-11  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-header-item.c (ethi_add_destroy_marker): Add group
	indent width here.
	(is_pointer_on_division): Use the group indent here, so the
	resize pointer is shown at the correct time.
	(TOLERANCE): Bump it up to 3
	(draw_button): Do not paint an arrow if there is an icon present,
	and not enough space to paint.

2000-04-10  Miguel de Icaza  <miguel@helixcode.com>

	* e-table-header-item.c (make_shapped_window_from_xpm): New
	routine, creates a shapped mask window from an xpm buffer.
	(ethi_add_drop_marker): New version, uses shaped windows instead
	of canvas items to signal the drop location.
	(ethi_maybe_start_drag): Disable dragging if there is only one
	column left.

2000-04-10  Miguel de Icaza  <miguel@gnu.org>

	* e-table-header-item.c (ethi_drag_motion): Drop frozen count
	support from here. 
	(ethi_start_drag): ditto.

	* e-table-header.h: Kill frozen_count.

2000-04-09  Matt Loper  <matt@helixcode.com>

	* e-table-col.c (e_table_col_new_with_pixbuf): ref etc->ecell,
	like in e_table_col_new, since that same ECell is unref'd in
	etc_destroy().

2000-04-08  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Separated some functions into an xml bit and a
	generic bit.

2000-04-06  Christopher James Lahey  <clahey@helixcode.com>

	* test-cols.c, test-table.c: Got rid of some warnings.

	* e-table-group-container.c, e-table-group-container.h,
	e-table-group-leaf.c, e-table-group-leaf.h, e-table-group.c,
	e-table-group.h, e-table-header-item.c, e-table-header-item.h,
	e-table-sort-info.c, e-table-sort-info.h,
	e-table-sorted-variable.c, e-table-sorted-variable.h, e-table.c,
	e-table.h: Changed ETableSortInfo to not use xml internally.
	
2000-04-06  Miguel de Icaza  <miguel@gnu.org>

	* e-cell-text.c: Killed ARG_EDITABLE.
	(ect_event): Updated to new editable setup.